--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <form action="" id="form">
             <p>Registrar informacion</p>
             <div class="container">
-                <input type="text" placeholder="Nombre completo" id="nombre">
-                <input type="email" placeholder="Tu email" id="correo">
+                <input type="text" placeholder="Nombre completo" id="nombre" required>
+                <input type="email" placeholder="Tu email" id="correo" required>
             </div>
             <div>
                 <div>
