--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <ul class="menu">
-                <li class="button"><a href="#" id="Inicio">Inicio</a></li>
+                <li class="button"><a href="./index.html" id="Inicio">Inicio</a></li>
                 <li class="button"><a href="./index2.html" id="informacion">Informacion</a></li>
-                <li class="button lista-r"><a href="#">Contactenos</a></li>
+                <li class="button lista-r"><a href="./contactenos.html">Contactenos</a></li>
             </ul>
         </nav>
     </header>
